# Neuroproof_minimal

./: CMakeLists.txt  NeuroProof_stack.cpp  NeuroProof_stack_learn.cpp  README.md  conda_build_instructions.txt
Algorithms/: CMakeLists.txt  MergePriorityFunction.cpp  MergePriorityFunction.h  RagAlgs.h
Classifier/: CMakeLists.txt  edgeclassifier.h  opencvRFclassifier.cpp  opencvRFclassifier.h  vigraRFclassifier.cpp  vigraRFclassifier.h
DataStructures/: CMakeLists.txt  Glb.h  NodeType.h  Rag.h  RagEdge.h  RagNode.h  Stack.cpp  Stack.h  StackLearn.cpp  StackPredict.cpp
FeatureManager/: CMakeLists.txt  FeatureCache.h  FeatureManager.cpp  FeatureManager.h  Features.h
Utilities/: h5read.h  unique_row_matrix.h
Watershed/: vigra_watershed.h
